<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/textViewCreateAcc"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAccName"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:hint="Account Name"
        android:textSize="35dp"
        android:inputType="text"
        android:layout_below="@+id/textViewCreateAcc"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textSize="35dp"
        android:hint="Password"
        android:layout_below="@+id/editTextAccName"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextConPass"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textSize="35dp"
        android:hint="Confirm Password"
        android:layout_below="@+id/editTextPass"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:textSize="35dp"
        android:hint="Email"
        android:layout_alignParentStart="true"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/editTextConPass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:id="@+id/buttonCreate"
        android:layout_weight="0.02"
        android:onClick="createButton"
        android:layout_marginLeft="45dp"
        android:layout_alignTop="@+id/buttonCancel"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/buttonCancel"
        android:layout_weight="0.02"
        android:layout_gravity="right"
        android:onClick="cancelButton"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCity"
        android:textSize="30dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Select City"
        android:id="@+id/textView4"
        android:layout_below="@+id/editTextEmail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms of use"
        android:id="@+id/checkBoxTermsOfUse"
        android:checked="false"
        android:layout_below="@+id/spinnerCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Read Terms"
        android:id="@+id/buttonReadTerms"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/checkBoxTermsOfUse"
        android:layout_centerHorizontal="true"
        android:onClick="readTermsButton" />


</RelativeLayout>