<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAcc"
        android:layout_above="@+id/editTextPass"
        android:layout_marginBottom="56dp"
        android:layout_alignStart="@+id/editTextPass"
        android:layout_alignEnd="@+id/editTextPass"
        android:hint="Account Name"
        android:textSize="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="223dp"
        android:textSize="30sp"
        android:hint="Password"
        android:password="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/buttonCreateAcc"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/editTextPass"
        android:layout_marginBottom="86dp"
        android:onClick="createAccButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/buttonLogin"
        android:layout_alignTop="@+id/buttonCreateAcc"
        android:layout_alignStart="@+id/editTextPass"
        android:onClick="loginButton" />
</RelativeLayout>